Add Samsung Tv Client. Modify AniGodGrabberServlet.